[BE,DOC] Some Plural Endpoint Name Fixes
