# controller/room_controller.go
@@ -213,7 +213,7 @@ func (rc *RoomController) DeleteById(c *gin.Context) {
 // @Produce      json
 // @Success      200  {object}  entity.ResponseGetMostContext
 // @Failure      404  {object}  map[string]string
-// @Router       /api/v1/room/mostContext/{targetCol} [get]
+// @Router       /api/v1/room/most-context/{targetCol} [get]
 // @Param        targetCol  path  string  true  "Target Column to Analyze (such as: asset_merk, asset_category, or asset_status)"
 func (rc *RoomController) GetMostContext(c *gin.Context) {
 	// Param
