# docs/swagger.yaml
@@ -250,12 +250,12 @@ definitions:
         type: string
       room_dept:
         type: string
-      roomName:
+      room_name:
         type: string
     required:
     - floor
     - room_dept
-    - roomName
+    - room_name
     type: object
   entity.RequestUpdateAssetById:
     properties:
@@ -639,7 +639,7 @@ definitions:
         type: string
       room_dept:
         type: string
-      roomName:
+      room_name:
         type: string
     type: object
   entity.RoomAsset:
@@ -656,7 +656,7 @@ definitions:
         type: string
       room_dept:
         type: string
-      roomName:
+      room_name:
         type: string
       total_asset:
         type: integer
@@ -671,7 +671,7 @@ definitions:
         type: string
       room_dept:
         type: string
-      roomName:
+      room_name:
         type: string
     type: object
   entity.StatsContextTotal:
@@ -982,7 +982,7 @@ paths:
       summary: Delete Asset Finding By Id
       tags:
       - Asset
-  /api/v1/asset/finding/hour_total:
+  /api/v1/asset/finding/hour-total:
     get:
       consumes:
       - application/json
@@ -1127,7 +1127,7 @@ paths:
       summary: Get All Asset Maintenance Schedule
       tags:
       - Asset
-  /api/v1/asset/mostContext/{targe_col}:
+  /api/v1/asset/most-context/{targetCol}:
     get:
       consumes:
       - application/json
@@ -1302,7 +1302,7 @@ paths:
       summary: Get All History
       tags:
       - History
-  /api/v1/history/mostContext/{targe_col}:
+  /api/v1/history/most-context/{targetCol}:
     get:
       consumes:
       - application/json
@@ -1514,7 +1514,7 @@ paths:
       summary: Get Room Asset By Floor And Room Name (Short)
       tags:
       - Room
-  /api/v1/room/mostContext/{targe_col}:
+  /api/v1/room/most-context/{targetCol}:
     get:
       consumes:
       - application/json
